# MultiGather

./: LICENSE  README.md  pyproject.toml
MultiGather/: Client.py  Types.py  __init__.py
MultiGather.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: get.py  post.py  proxies.py
