[project]
name = "MultiGather"
version = "0.0.1"
authors = [
  { name="Mr. Mahdi.", email="any@hi2.in" },
]
description = "Send multiple requests using 3 lines of code!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tm-sah/MultiGather"
Issues = "https://github.com/tm-sah/MultiGather/issues"